--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,7 @@ jobs:
   include:
     - stage: test
       python: '3.6'
+    - stage: test
+      python: '3.7'
+    - stage: test
+      python: '3.8'
